# ifc-hydro-topologic

./: .gitignore  README.md  pyproject.toml  run_pipeline.py
ifc_hydro/: __init__.py
ifc_hydro/core/: __init__.py  base.py  geom.py  graph.py  vector.py
ifc_hydro/examples/demo/: demo-project.ifc  demo.py
ifc_hydro/examples/demo/old/: demo-project_old.ifc
ifc_hydro/examples/eval/: eval-project.ifc  eval.py
ifc_hydro/examples/eval/old/: eval-project_old.ifc
ifc_hydro/hydraulics/: __init__.py  design_flow.py  input_tables.py  pressure.py  pressure_drop.py
ifc_hydro/properties/: __init__.py  fitting.py  pipe.py  valve.py
ifc_hydro/topology/: __init__.py  topology.py
ifc_hydro/visualization/: __init__.py  graph_plotter.py
results/: ablation_study.csv  baseline_comparison.csv  hyperparameter_search.csv  predictions.csv
results/csv_data/: edges.csv  graphs.csv  nodes.csv
src/ifc_hydro_topologic/: __init__.py  analysis.py  bridge.py  gnn.py  hydro_generator.py  serializer.py
tests/: conftest.py  test_analysis.py  test_bridge.py  test_hydro_generator.py  test_serializer.py
