[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifc-hydro-topologic"
version = "0.1.0"
description = "Bridge between ifc-hydro MEP parser and topologicpy graph analysis + GNN pipeline"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
ifc = [
    "ifcopenshell",
]
topologic = [
    "topologicpy>=0.9.7",
]
gnn = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
]
all = [
    "ifc-hydro-topologic[ifc,topologic,gnn]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/ifc_hydro_topologic"]
